新增功能: 當購物車數量大於商品庫存時，會無法加入購物車並顯示錯誤 / 新增購物車頁面

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -34,7 +34,8 @@
             </div>
             <div class="text-center mt-3">
               <button pButton class="p-button-sm p-button-outlined cart-btn"
-                [disabled]="item.inventoryStatus === 'OUTOFSTOCK'">加入購物車</button>
+                [disabled]="item.inventoryStatus === 'OUTOFSTOCK'"
+                (click)="addToCart(item.productId, item.stock)">加入購物車</button>
             </div>
           </div>
 
