--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<p-toast></p-toast>
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-  <a class="navbar-brand" href="#">{{title}}</a>
+  <a class="navbar-brand" routerLink="home">{{title}}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -18,8 +19,8 @@
     </ul>
     <div class="member-section" *ngIf="showMemberSection">
       <button pButton icon="pi pi-user" class="p-button-outlined" style="border-radius: 100%"></button>&nbsp;
-      <button pButton icon="pi pi-shopping-cart" class="p-button-outlined p-button-rounded"
-        style="border-radius: 100%"></button>
+      <button pButton icon="pi pi-shopping-cart" class="p-button-outlined p-button-rounded" style="border-radius: 100%"
+        routerLink="cart"></button>
     </div>
   </div>
 </nav>
